# ChangeLog for catalyst
# Copyright 2002-2009 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
# Distributed under the GPL v2

  11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/spawn.py, modules/catalyst/support.py,
  modules/catalyst/target/generic_stage.py, modules/catalyst/target/grp.py,
  modules/catalyst/target/livecd_stage1.py,
  modules/catalyst/target/livecd_stage2.py,
  modules/catalyst/target/netboot.py, modules/catalyst/target/netboot2.py,
  modules/catalyst/target/snapshot.py, modules/catalyst/target/tinderbox.py:
  Add catalyst.spawn import where needed and move more spawn-related stuff
  from catalyst.support to catalyst.spawn

  11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org> catalyst,
  modules/catalyst/arch/powerpc.py, modules/catalyst/arch/sparc.py,
  modules/catalyst/arch/x86.py, modules/catalyst/config.py,
  +modules/catalyst/error.py, modules/catalyst/hash.py,
  +modules/catalyst/spawn.py, modules/catalyst/support.py,
  modules/catalyst/target/generic_stage.py, modules/catalyst/target/grp.py,
  modules/catalyst/target/livecd_stage2.py,
  modules/catalyst/target/netboot.py, modules/catalyst/target/netboot2.py,
  modules/catalyst/target/tinderbox.py, modules/catalyst/util.py:
  Move custom exception classes to catalyst.error and all spawn-related
  functions to catalyst.spawn

  11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  +modules/catalyst/hash.py, modules/catalyst/support.py,
  modules/catalyst/target/generic_stage.py,
  modules/catalyst/target/livecd_stage2.py,
  modules/catalyst/target/stage2.py, modules/catalyst/util.py:
  Move all hash and contents functions to catalyst.hash

  11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/support.py, modules/catalyst/target/generic_stage.py,
  modules/catalyst/util.py:
  Move countdown() from catalyst.support to catalyst.util

  11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>