@@ -3,6 +3,12 @@
 # Distributed under the GPL v2
 
   11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
+  modules/catalyst/support.py, modules/catalyst/target/generic_stage.py,
+  modules/catalyst/target/livecd_stage2.py,
+  modules/catalyst/target/netboot.py, modules/catalyst/util.py:
+  Move file_locate() from catalyst.support to catalyst.util
+
+  11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
   modules/catalyst/spawn.py, modules/catalyst/support.py,
   modules/catalyst/target/generic_stage.py, modules/catalyst/target/grp.py,
   modules/catalyst/target/livecd_stage1.py,
